feat:整理jvm内容